k8s/deploy_rails.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-deploy
  labels:
    app: rails
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails
  template:
    metadata:
      labels:
        app: rails
    spec:
      containers:
      - name: rails
        image: bakamakhil854/myapp:latest
        ports:
          - containerPort: 3000
