k8s/service_rails.yml.yml
apiVersion: v1
kind: Service
metadata:
  name: rails-service
spec:
  type: NodePort
  selector:
    app: rails
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
